fix announcement link z-index positioning

--- a/source/stylesheets/_components.scss
+++ b/source/stylesheets/_components.scss
@@ -548,7 +548,6 @@ input[type="submit"] {
   font-weight: 700;
   padding: 0.5rem 1rem;
   font-size: 0.8125rem;
-  z-index: 1;
 
   @include tablet-portrait {
     top: 2rem;
